# Units

./: .mailmap  Readme.md
.github/workflows/: Test.yml
include/: Units.h
source/: AmplitudeUnits.h  FilterUnits.h  FrequencyUnits.h  UnitBase.h
tests/: AmplitudeUnitsTests.cpp  CMakeLists.txt  FrequencyUnitsTests.cpp  ResonanceUnitsTests.cpp  TestIncludes.h  TestMain.cpp  UnitsTests.cpp
